--- a/style.css
+++ b/style.css
@@ -117,143 +117,55 @@ header {
 	background-color: #ededed;
 }
 
-/* hamburger menu */
+/* hamburger menu from w3schools */
+
+/* Style the navigation menu */
+.topnav {
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.877);
+    position: relative;
+  }
+  
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .topnav #myLinks {
+    display: none;
+  }
+  
+  /* Style navigation menu links */
+  .topnav a {
+    color: #203354;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: bold;
+    display: block;
+  }
+  
+  /* Style the hamburger menu */
+  .topnav a.icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  
+  /* Add a grey background color on mouse-over */
+  .topnav a:hover {
+    color: rgb(255, 255, 255);
+  }
+  
+  /* Style the active link (or home/logo) */
+  .active {
+    background-color: #203354;
+    color: white;
+  }
+  
+  
 
 .hambuger {
 	display: none;
 }
 
-#menuToggle {
-    display: block;
-	position: relative;
-	top: 50px;
-	left: 50px;
-
-	z-index: 1;
-
-	-webkit-user-select: none;
-	user-select: none;
-}
-
-#menuToggle a {
-	text-decoration: none;
-	color: #232323;
-
-	transition: color 0.3s ease;
-}
-
-#menuToggle a:hover {
-	color: #f9bd4d;
-}
-
-#menuToggle input {
-	display: block;
-	width: 40px;
-	height: 32px;
-	position: absolute;
-	top: -7px;
-	left: -5px;
-
-	cursor: pointer;
-
-	opacity: 0; /* hide this */
-	z-index: 2; /* and place it over the hamburger */
-
-	-webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span {
-    font-weight: bold;
-	display: block;
-	width: 33px;
-	height: 4px;
-	margin-bottom: 5px;
-	position: relative;
-    color: #ffffff;
-	background: #203354;
-	border-radius: 3px;
-
-	z-index: 1;
-
-	transform-origin: 4px 0px;
-
-	transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-		background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
-}
-
-#menuToggle span:first-child {
-	transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2) {
-	transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span {
-	opacity: 1;
-	transform: rotate(45deg) translate(-2px, -1px);
-	background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3) {
-	opacity: 0;
-	transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2) {
-	transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu {
-	position: absolute;
-	width: 300px;
-	margin: -100px 0 0 -80px;
-	padding: 50px;
-    padding-top: 125px;
-    padding-right:100px;
-    border-radius: 7px;
-    box-shadow: -7px 2px 60px -24px rgba(217,219,224,1);;
-	background: #ffffffd7;
-    list-style-type: none;
-    
-	-webkit-font-smoothing: antialiased;
-	/* to stop flickering of text in safari */
-
-	transform-origin: 0% 0%;
-	transform: translate(-100%, 0);
-
-	transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-}
-
-#menu li {
-	padding: 10px 0;
-    font-size: 18px;
-    font-weight: 600;
-}
-
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul {
-	transform: none;
-}
 
 /* Sections: core, text, program, content */
 /* CORE */
