--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ header {
   
   /* Style the hamburger menu */
   .topnav a.icon {
+    color: #ffffff;
     display: block;
     position: absolute;
     right: 0;
@@ -604,15 +605,42 @@ a:focus {
 		max-width: 100vw;
 		height: auto;
 	}
-	.estudiante {
+	/* .estudiante {
 		display: none;
-	}
+    } */
+    .core {
+        background: #f2f9ff;
+        height: min-content;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 4rem;
+    }
+    
+    .estudiante {
+        width: auto;
+        height: 18rem;
+       
+    }
 	.texto-main {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-content: space-between;
+		display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
         margin: 0 auto;
+        height: min-content;
+    }
+    .help-round {
+        justify-self: right;
+    }
+    .title {
+        grid-area: title;
+        height: 6rem;
+        font-family: Oswald;
+        font-weight: bold;
+        font-size: 48px;
+        line-height: 89px;
+        letter-spacing: 0.065em;
+        color: #203354;
+        align-self: flex-end;
     }
     .item-curriculum {
         background-color: #EFF8FF;
@@ -658,10 +686,7 @@ a:focus {
 		align-content: space-around;
 		margin: 0 auto;
     }
-    .logo-hamburger {
-    height:2rem;
-    width: auto;
-    }
+    
 	.hambuger {
 		display: block;
         z-index: 99;
@@ -675,9 +700,24 @@ a:focus {
 	.title {
 		font-size: 1.5rem;
 	}
-	.estudiante {
+	/* .estudiante {
 		display: none;
-	}
+    } */
+    .core {
+        background: #f2f9ff;
+        max-width: 100%;
+        height: 100vh;
+        margin-top: 4rem !important;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .estudiante {
+        width: auto;
+        height: 16rem;
+    }
 	.content {
 		display: flex;
 		flex-direction: column;
