--- a/style.css
+++ b/style.css
@@ -431,9 +431,12 @@ a:focus {
 }
 .description {
 	padding: 0 4rem;
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: space-evenly; */
+	display: grid;
+	grid-template-rows: 1fr 1.5fr 1fr;
+	gap: 1.5rem;
 }
 .info2 {
 	display: flex;
@@ -600,7 +603,7 @@ a:focus {
 }
 /* MEDIA QUERIES */
 /* for mobile devices hamburger menu */
-@media all and (min-width: 481px) and (max-width: 768px) {
+@media all and (min-width: 481px) and (max-width: 769px) {
 	/* Tablet view: 2 tiles */
 	main {
 		display: flex;
@@ -611,9 +614,7 @@ a:focus {
 		max-width: 100vw;
 		height: auto;
 	}
-	/* .estudiante {
-		display: none;
-    } */
+	
     .core {
         background: #f2f9ff;
         height: min-content;
@@ -670,6 +671,7 @@ a:focus {
         display: none;
     }
     .hamburger {
+		visibility: visible;
 		display: block;
         z-index: 99;
     }
@@ -779,6 +781,7 @@ a:focus {
 	.content-item {
 		display: grid;
 		grid-template-columns: 1fr;
+		gap: 10px;
     }
     /* footer */
     .footer {
