--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *,
 html {
 	max-width: 100vw !important;
@@ -122,7 +123,7 @@ header {
 /* Style the navigation menu */
 .topnav {
     overflow: hidden;
-    background-color: rgba(255, 255, 255, 0.877);
+    background-color: #f9bd4de5;
     position: relative;
   }
   
@@ -152,7 +153,7 @@ header {
   
   /* Add a grey background color on mouse-over */
   .topnav a:hover {
-    color: #f9bd4d;
+    color: #ffffff;
   }
   
   /* Style the active link (or home/logo) */
@@ -496,7 +497,6 @@ a:focus {
 	color: #ffffff;
 }
 .right-block {
-    color: #ffffff;
 	grid-area: right;
 	display: flex;
 	flex-direction: column;
@@ -603,7 +603,7 @@ a:focus {
 }
 /* MEDIA QUERIES */
 /* for mobile devices hamburger menu */
-@media all and (min-width: 481px) and (max-width: 769px) {
+@media all and (min-width: 481px) and (max-width: 768px) {
 	/* Tablet view: 2 tiles */
 	main {
 		display: flex;
@@ -670,15 +670,15 @@ a:focus {
     .help {
         display: none;
     }
-    .hamburger {
-		visibility: visible;
+    .hambuger {
 		display: block;
         z-index: 99;
     }
     .navbar {
 		display: none;
-    }
-    .footer-brand {
+	}
+	/*añadidos nuevos*/
+	.footer-brand {
         display: none
     }
     .container-footer2{
@@ -686,7 +686,7 @@ a:focus {
     }
     .logo-footer2 {
         visibility: visible;
-    }
+    }   
 
     
 }
@@ -781,10 +781,15 @@ a:focus {
 	.content-item {
 		display: grid;
 		grid-template-columns: 1fr;
-		gap: 10px;
     }
     /* footer */
-    .footer {
+    /* .footer {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: space-evenly;   
+	} */
+	.footer {
         display: flex;
         flex-direction: column;
         align-content: center;
@@ -807,7 +812,13 @@ a:focus {
     .logo-footer2 {
         visibility: visible;
     }
-    .address {
+    /* .address {
+        display: flexbox;
+        justify-content: space-evenly;
+        align-content: center;
+        line-height: 1px;
+	} */
+	.address {
         display: flexbox;
         justify-content: space-evenly;
         align-content: center;
@@ -828,9 +839,11 @@ a:focus {
         flex-direction: column;
         justify-content: space-evenly;
         width: 90%;
-    }
-    .right-block p{
+	}
+	.right-block p{
         font-size: .7rem;
     }
 
 }
+
+
