--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ header {
   
   
 
-.hambuger {
+.hamburger {
 	display: none;
 }
 
@@ -436,7 +436,6 @@ a:focus {
 	flex-direction: column;
 	justify-content: space-evenly; */
 	display: grid;
-	grid-template-rows: 1fr 1.5fr 1fr;
 	gap: 1.5rem;
 }
 .info2 {
@@ -632,8 +631,7 @@ a:focus {
 		display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
-        margin: 0 auto;
-        height: min-content;
+		height: 18rem;
     }
     .help-round {
         justify-self: right;
@@ -644,7 +642,7 @@ a:focus {
         font-family: Oswald;
         font-weight: bold;
         font-size: 48px;
-        line-height: 89px;
+        line-height: 175px;
         letter-spacing: 0.065em;
         color: #203354;
         align-self: flex-end;
@@ -670,7 +668,7 @@ a:focus {
     .help {
         display: none;
     }
-    .hambuger {
+    .hamburger {
 		display: block;
         z-index: 99;
     }
@@ -704,7 +702,7 @@ a:focus {
 		margin: 0 auto;
     }
     
-	.hambuger {
+	.hamburger {
 		display: block;
         z-index: 99;
     }
@@ -716,6 +714,7 @@ a:focus {
 	}
 	.title {
 		font-size: 1.5rem;
+		height: 3rem;
 	}
 
     .core {
@@ -781,14 +780,17 @@ a:focus {
 	.content-item {
 		display: grid;
 		grid-template-columns: 1fr;
-    }
+		gap: 1rem;
+	}
+	
+	.description {
+		padding: 0 4rem;
+	
+		display: grid;
+		gap: 1rem;
+	}
     /* footer */
-    /* .footer {
-        display: flex;
-        flex-direction: column;
-        align-content: center;
-        justify-content: space-evenly;   
-	} */
+   
 	.footer {
         display: flex;
         flex-direction: column;
@@ -812,12 +814,7 @@ a:focus {
     .logo-footer2 {
         visibility: visible;
     }
-    /* .address {
-        display: flexbox;
-        justify-content: space-evenly;
-        align-content: center;
-        line-height: 1px;
-	} */
+    
 	.address {
         display: flexbox;
         justify-content: space-evenly;
